# pii-detect

./: .gitignore  .pre-commit-config.yaml  BOOTSTRAP.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  sample_text.txt  setup.cfg  setup.py  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: __init__.py  pii_detect.py
src/pii_detect/: __init__.py  cli.py  detector.py
tests/: conftest.py  test_cli.py  test_detector.py
