[metadata]
name = pii-detect
version = 1.0.0
author = Ian
author_email = ian@adaptivekind.com
description = A CLI tool for detecting personally identifiable information (PII) in text files using Microsoft Presidio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adaptivekind/pii-detect
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: Text Processing
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    presidio-analyzer>=2.2.0
    presidio-anonymizer>=2.2.0
    spacy>=3.4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pii-detect = pii_detect:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --tb=short
    --cov=src
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=70

[flake8]
max-line-length = 88
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    htmlcov,
    build,
    dist,
    *.egg-info

[isort]
profile = black
multi_line_output = 3
line_length = 88
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
